src/components/SystemBanner/system-banner-item.css
:host {
  display: block;
  width: inherit;
  font-size: var(--sgds-font-size-1, 14px);
  font-style: normal;
  font-weight: var(--sgds-font-weight-regular, 400);
  line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
  letter-spacing: var(--sgds-letter-spacing-normal, 0);
}

/* Handles inline links and all texts */
::slotted(*) {
  font-size: var(--sgds-font-size-1, 14px) !important;
  line-height: var(--sgds-line-height-20, 20px) !important;
  color: var(--sgds-color-fixed-light) !important;
}

.banner-item {
  display: flex;
  gap: var(--sgds-gap-sm);
  color: var(--sgds-color-fixed-light);
  padding: var(--sgds-padding-2-xs) 0;
}

.message {
  display: -webkit-box;
  line-clamp: 5;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
  word-break: break-all;
  max-height: calc(5 * var(--sgds-line-height-20, 20px)); /* 5 lines */
}

.message.truncated::after {
  content: "";
  text-align: right;
  position: absolute;
  bottom: 0;
  right: 0;
  width: 10ch;
  height: var(--sgds-line-height-20, 20px);
  background-color: var(--sgds-surface-fixed-dark);
}

.clamped-container {
  position: relative;
  display: inline-block;
  max-width: var(--sgds-dimension-872);
  margin-right: var(--sgds-margin-md);
}

.show-more {
  position: absolute;
  right: 0;
  bottom: 0;
  white-space: nowrap;
}

.show-more__link {
  cursor: pointer;
  text-decoration: underline;
}
.action {
  display: flex;
  gap: var(--sgds-gap-2-xs, 4px);
  align-items: center;
  margin-top: 6px;
  white-space: nowrap;
  /** even if no action is slotted, the container needs a height in mobile **/
  min-height: var(--sgds-line-height-20);
}
slot[name="action"]::slotted(a) {
  text-decoration: none !important;
  color: var(--sgds-color-fixed-light) !important;
  font-size: var(--sgds-font-size-1, 14px) !important;
}

.banner-item__message_and__action {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-xs);
  flex: 1 0 0;
}
/* DESKTOP */
@media (min-width: 512px) {
  .banner-item__message_and__action {
    flex-direction: row;
    gap: var(--sgds-gap-sm);
  }
  .action {
    margin-top: 0;
    margin-left: auto;
  }
  .message {
    display: -webkit-box;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    word-break: break-all;
    max-height: calc(2 * var(--sgds-line-height-20, 20px)); /* 2 lines */
  }
}

